--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "discordbot",
+  "name": "poi_bot",
   "version": "1.0.0",
-  "description": "bot",
+  "description": "Granblue Fantasy Emote Bot",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
