--- a/json/package.json
+++ b/json/package.json
@@ -4,7 +4,7 @@
   "description": "Granblue Fantasy Emote Bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Korux",
   "license": "ISC",
