--- a/json/package.json
+++ b/json/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "poi_bot",
+  "name": "unicorn_bot",
   "version": "1.0.0",
   "description": "Granblue Fantasy Emote Bot",
   "main": "index.js",
