--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "discord.js": "11.3.0",
-    "jimp": "0.2.28"
+    "jimp": "0.2.28",
+    "opusscript": "0.0.6"
   }
 }
