--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "discord.js": "11.3.0",
     "jimp": "0.2.28",
-    "opusscript": "0.0.6"
+    "opusscript": "0.0.6",
+    "ytdl-core": "^0.20.4"
   }
 }
